<resources>
    <string name="app_name">ELIKAD_Einsatzleitmonitor</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="telNr">Telephone Number</string>
    <string name="Code">Login Code</string>
    <string name="btn_login">Login</string>
    <string name="txt_signIn_header">SIGN IN</string>
    <string name="OpText">TestText</string>
    <string name="accept">Zusagen</string>
    <string name="EL">EL</string>
    <string name="AGT">AGT</string>
    <string name="MA">MA</string>
    <string name="SAN">SAN</string>
</resources>
